Improved Java 9 compatibility.